# Toolbox

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  exclude-pattern.txt  exclude-patterns.txt
.github/workflows/: ci.yml  docs.yml
app/: main.py  moncsv.csv
app/modules/: __init__.py  mon_module.py
docs/source/: conf.py  index.rst
tests/: test_math_csv.py
