[project]
name = "toolbox-mlops"
version = "0.1.0"
description = "toolbox MLOps réutilisable"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "pandas>=2.3.3",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E","W","F","I", "D"]
ignore = ["D100","D203", "D213"]



[tool.pytest.ini_options]
testpaths =["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov-report=term-missing"

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "sphinx>=8.1.3",
]
